--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -387,7 +387,7 @@
 
             <div class="col-sm-6 col-lg-3 d-flex justify-content-center mb-4" style="width:50%;height:50%;">
                 <div class="card" style="width: 18rem;" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <img src="image/cốt-ủ-500g.jpg" alt="kem_500g" class="img-thumbnail">
+                    <img src="image/cốt ủ 500g.jpg" alt="kem_500g" class="img-thumbnail">
 
                     <div class="card-body font-weight-bold">
                         <p class="card-text">Kem Body Cốt Ủ - 500gr</p>
